--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,42 @@
 body {
- font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 nav {
- background-color: #333;
- padding: 10px;
+  background-color: #333;
+  padding: 10px;
 }
 
 nav ul {
- list-style-type: none;
- padding: 0;
- margin: 0;
- display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 nav ul li {
- margin-right: 20px;
+  margin-right: 20px;
 }
 
 nav ul li a {
- color: white;
- text-decoration: none;
- padding: 8px 16px;
- border-radius: 4px;
- transition: background-color 0.3s;
+  color: white;
+  text-decoration: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  transition: background-color 0.3s;
 }
 
 nav ul li a:hover {
- background-color: #575757;
+  background-color: #575757;
 }
 
 .active {
- background-color: #4CAF50;
- color: white;
+  background-color: #4CAF50;
+  color: white;
+}
+
+.nav-language-switcher {
+  margin-left: auto; /* Moves the language switcher to the right edge */
 }
